CREATED new endpoint to generate token with req.user
